Finished the animation in cf-events.

--- a/index.html
+++ b/index.html
@@ -78,28 +78,28 @@
 					<P>FreeCodeCamp成都社区致力于为成都本地FCC学员提供线下交流互动的平台，自2016年4月以来，FCC成都学习小组一直有新鲜血液加入，同时在学员们积极筹划和参与下，线下Code&Coffee活动得以顺利进行。</P>
 					<div class="row">
 						<div class="col-xs-12 col-sm-4 cf-events-image">
-							<img src="./img/events/events-1.jpg" alt="event 1">
+							<img id="img-1" src="./img/events/events-1.jpg" alt="event 1">
 
 						</div>
 						<div class="col-xs-12 col-sm-4 cf-events-image">
-							<img src="./img/events/events-2.jpg" alt="event 2">
+							<img id="img-2" src="./img/events/events-2.jpg" alt="event 2">
 						</div>
 						<div class="col-xs-12 col-sm-4 cf-events-image">
-							<img src="./img/events/events-3.jpg" alt="event 3">
+							<img id="img-3" src="./img/events/events-3.jpg" alt="event 3">
 						</div>
 
 					</div>
 					<div class="row" style="margin-top:30px;">
 						<div class="col-xs-12 col-sm-4 cf-events-image">
-							<img src="./img/events/events-4.jpg" alt="event 4">
+							<img id="img-4" src="./img/events/events-4.jpg" alt="event 4">
 						</div>
 						<div class="col-xs-12 col-sm-4 cf-events-image">
-							<img src="./img/events/events-5.jpg" width="261px"
+							<img id="img-5" src="./img/events/events-5.jpg" width="261px"
 							     height="195px" alt="event 5" >
 
 						</div>
 						<div class="col-xs-12 col-sm-4 cf-events-image">
-							<img src="./img/events/events-6.jpg" width="261px"
+							<img id="img-6" src="./img/events/events-6.jpg" width="261px"
 							     height="195px" alt="event 6" >
 						</div>
 					</div>
